# ai-stock

./: .gitignore  README.md  update.sh
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/stockai/app/: MainActivity.kt
android/app/src/main/java/com/stockai/app/data/: AppDao.kt  AppDatabase.kt  AppPreferences.kt  AppRepository.kt  RecommendationEntity.kt  WatchlistEntity.kt
android/app/src/main/java/com/stockai/app/network/: ApiClient.kt  WsClient.kt  WsConnectionState.kt  WsModels.kt
android/app/src/main/java/com/stockai/app/service/: BootCompletedReceiver.kt  FloatingWidgetService.kt  NotificationHelper.kt  ServiceLauncher.kt  WsForegroundService.kt
android/app/src/main/java/com/stockai/app/ui/: MainViewModel.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-zh/: strings.xml
backend/: .env.example  debug.sh  pyproject.toml  run.sh  服务端安装部署说明（Linux）.md
backend/app/: main.py
backend/app/api/: http_routes.py  ws_routes.py
backend/app/core/: config.py  debug_service.py  scheduler.py  websocket_manager.py
backend/app/db/: database.py  repository.py
backend/app/engine/: features.py  guardrails.py  indicators.py  llm_client.py  prefilter.py  recommendation_engine.py
backend/app/models/: orm.py  schemas.py
backend/app/providers/: market.py  news.py
backend/tests/: test_guardrails.py  test_http_routes.py  test_news_provider.py  test_prefilter.py  test_ws_protocol.py
