[project]
name = "stock-ai-backend"
version = "0.1.0"
description = "A-share recommendation backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.43",
  "pydantic>=2.11.7",
  "apscheduler>=3.11.0",
  "httpx>=0.28.1",
  "akshare>=1.16.98",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
